# phys-res-lib

./: =1.35.0  BUILD.txt  CMakeLists.txt  LICENSE  Test.csv
.streamlit/: config.toml
artifacts/: test_ci.json
docs/: physresidual_api.txt
examples/: example_power.c  measurement_hx_sample.csv  measurement_y_sample.csv  power_balance_sample.csv  sample_powers.csv
include/: physresidual.h
python/: app.py  requirements-lock.txt  requirements.txt  shift_study.py  ui_helpers.py
python/pages/: 1_Power_Balance.py  2_Measurement_Residual.py
scripts/: build_portable_cli.bat  reproduce_experiment.ps1
src/: physresidual.c
tools/: physresidual_cli.c
